--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
 services:
   cas:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-     - "8443:8443"
-     - "8080:8080"
+      - "9090:9090"
